Templates/Others/ServiceAccount.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: build-robot
  # The pod spec takes precedence over the service account if both specify a automountServiceAccountToken value.
  automountServiceAccountToken: false
  # ...
